# coact-api

./: .env.example  .gitignore  Dockerfile  Dockerfile.mongo  GIDS_USER_VIEW_REPORT.md  Makefile  README.md  auth.py  db.py  docker-compose.yml  main.py  models.py  mongo-restore-dump.sh  mongod.conf  pyproject.toml  requirements.txt  schema.py  test.json
.github/workflows/: ci-cd.yaml  docker_publish.yml
assets/notifications/email/: UserAccount_Completed_czar.jinja2  UserAccount_Completed_user.jinja2  UserAccount_Incomplete_admin.jinja2  UserAccount_NotActedOn_czar.jinja2  UserAccount_NotActedOn_user.jinja2  UserAccount_PreApproved_czar.jinja2  UserAccount_PreApproved_user.jinja2
client/: Makefile  pyproject.toml
client/queries/: operations.graphql
client/src/coact/client/: __init__.py  all_repos_and_facility.py  am_i_registered.py  client.py  clusters.py  enums.py  facilities.py  facilities_i_manage.py  facility.py  facility_detail.py  facility_name_descs.py  facility_names_with_registration.py  facility_recent_compute_usage.py  get_user_for_eppn.py  input_types.py  my_repos.py  my_repos_and_facility.py  my_repos_compute_view.py  repo_audit_detail.py  repo_audit_trails.py  repo_compute_detail.py  repo_compute_jobs.py  repo_features.py  repo_groups_detail.py  repo_storage_detail.py  repo_users_detail.py  report_facility_compute_by_day.py  report_facility_compute_by_user.py  report_facility_compute_overall.py  report_facility_storage.py  repos.py  request_statuses.py  request_types.py  requests.py  requests_view.py  user_audit_trails.py  users.py  users_lookup_from_service.py  users_matching_user_name.py  users_matching_user_names.py  (+1 more)
client/tests/: conftest.py  test_queries.py
kubernetes/overlays/dev/: Makefile  code-pvc.yaml  deployment.yaml  endpoints.yaml  kustomization.yaml  mongo.yaml
openfga/: Dockerfile  Makefile  main.py  pyproject.toml
openfga/schema/: schema.fga.yaml  schema.json
openfga/scripts/: generate_fga_relations.py
openfga/src/openfga_slac/: models.py  sync.py
schema/: CHAINS.md  README.md  model.fga  tuples.example.yaml
scripts/: 00-indexes.mongo  00-indexes.mongodb  10-bootstrap.mongo  10-bootstrap.mongodb  20-facility-lcls.mongo  20-facility-lcls.mongodb  20220614.json  21-facility-cryoem.mongo  21-facility-cryoem.mongodb  22-facility-suncat.mongo  22-facility-suncat.mongodb  23-facility-rubin.mongodb  24-facility-neutrino.mongodb  25-facility-mli.mongo  25-facility-mli.mongodb  26-facility-fermi.mongo  27-facility-supercdms.mongo  28-facility-facet.mongodb  29-facility-epptheory.mongodb  30-facility-desc.mongodb  31-facility-kipac.mongodb  32-facility-ssrl.mongodb  33-facility-rfar.mongodb  34-facility-ldmx.mongodb  35-facility-hps.mongodb  36-facility-ad.mongodb  37-facility-simes.mongodb  38-facility-slac.mongodb  39-cluster-ada.mongodb  40-facility-scs.mongodb  41-rename-slac-facility.mongodb  42-facility-fpd.mongodb  BOOTSTRAPPING.md  MONGO.md  README.md  bootstrap.mongo  bootstrap.sh  docker-init-mongo.js  healthcheck-mongodb.sh  jobs2usage.py  (+11 more)
scripts/dev/: 00-test-users.mongodb
scripts/migration/: 00001.mongodb  00002.mongodb  00003.mongodb  00004.mongodb  00005.mongodb  00006.mongodb  00007.mongodb  00008.mongodb  00009.mongodb  00010.mongodb  00011.mongodb
scripts/test/: dailyagg.py
test/: bootstrap.sh  jobs2usage.py  load_sample_job_data.py  patchjobdata.py  sample_data.mongo  sample_job_data.json
tests/: conftest.py
tests/integration/: test_purchased_nodes_integration.py  test_queries.py
tests/unit/: test_facility_model.py  test_user_gidnumbers.py  test_utils.py
utils/: nl.py
